patched some layout issues

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -40,6 +40,16 @@
 	;
 }
 
+#main {
+	display: grid;
+	overflow: hidden;
+	grid-template-columns: 100vw;
+	grid-template-areas: 
+		"article"
+	;
+	overflow: hidden;
+}
+
 #content {
 	display: grid;
 	grid-template-columns: auto;
@@ -48,27 +58,22 @@
 	;
 }
 
-#main {
-	display: grid;
-	grid-template-columns: 100vw;
-	grid-template-areas: 
-		"article"
-}
 
 @media (min-width: 1024px) {
 	
 	#content {
-		grid-template-columns: 350px auto;
+		grid-template-columns: 325px 1fr;
 		grid-template-areas: 
 			"sitenav main"
 		;
 	}
 
 	#main {
-		grid-template-columns: 70% 30%;
-		grid-template-rows: auto auto;
+		grid-template-columns: 70% 40%;
+		grid-template-rows: auto;
 		grid-template-areas: 
 			"article pagenav"
+		;
 	}
 
 
@@ -77,78 +82,78 @@
 
 /* markdown styles ----------------------------------------------------------- */
 
-article h1 {
+#content-wrapper h1 {
     font-size: var(--text-2xl);
 }
 
-article h2 {
+#content-wrapper h2 {
     font-size: var(--text-xl);
     padding-top: 2rem;
 }
 
-article h3 {
+#content-wrapper h3 {
     font-size: var(--text-lg);
 }
 
-article p {
+#content-wrapper p {
     font-size: var(--text-xs);
     line-height: 1.75rem;
 }
 
-article pre {
+#content-wrapper pre {
     font-size: var(--text-xs);
     border-radius: var(--rounded-sm);
     overflow-x: auto;
     white-space: pre;
 }
 
-article code {
+#content-wrapper code {
     font-size: var(--text-xs);
     border-radius: var(--rounded-sm);
 }
 
-article a {
+#content-wrapper a {
     color: var(--main-color);
     text-decoration: underline;
 }
 
-html.dark article a {
+html.dark #content-wrapper a {
     color: var(--main-color);
 }
 
-article p code {
+#content-wrapper p code {
     background-color: var(--faint-gray);
     border-radius: var(--rounded-sm);
     padding: 0.25rem;
 }
 
 
-html.dark article p code {
+html.dark #content-wrapper p code {
     background-color: var(--dark-gray);
 }
 
-article p span code {
+#content-wrapper p span code {
     background-color: var(--faint-gray);
     border-radius: var(--rounded-sm);
     padding: 0.25rem;
 }
 
-html.dark article p span code {
+html.dark #content-wrapper p span code {
     background-color: var(--gray);
 }
 
-article p:has(> span.content-important) {
+#content-wrapper p:has(> span.content-important) {
     background-color: var(--codeblock-light-background);
     border-left: solid var(--main-color) 5px;
     border-radius: var(--rounded-sm);
     padding: 1rem;
 }
 
-html.dark article p:has(> span.content-important) {
+html.dark #content-wrapper p:has(> span.content-important) {
     background-color: var(--dark-gray);
 }
 
-article p div.content-important-exclamation {
+#content-wrapper p div.content-important-exclamation {
     font-size: var(--text-sm);
     font-weight: bold;
     display: flex;
@@ -158,7 +163,7 @@ article p div.content-important-exclamation {
     gap: 0.5rem;
 }
 
-article p div.content-warning-explode {
+#content-wrapper p div.content-warning-explode {
     font-size: var(--text-sm);
     font-weight: bold;
     display: flex;
@@ -168,18 +173,18 @@ article p div.content-warning-explode {
     gap: 0.5rem;
 }
 
-article p:has(> span.content-warning) {
+#content-wrapper p:has(> span.content-warning) {
     background-color: var(--codeblock-light-background);
     border-left: solid var(--warning-color) 5px;
     border-radius: var(--rounded-sm);
     padding: 1rem;
 }
 
-html.dark article p:has(> span.content-warning) {
+html.dark #content-wrapper p:has(> span.content-warning) {
     background-color: var(--dark-gray);
 }
 
-article p div.content-warning-explode {
+#content-wrapper p div.content-warning-explode {
     font-size: var(--text-sm);
     font-weight: bold;
     display: flex;
